code html pour maquette responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <a class="logo" href=""><img src="images/logo.png" alt="Logo"></a>
+        <div>
+            <a class="logo" href=""><img src="images/logo.png" alt="Logo"></a>
+        </div>
         <nav>
             <a href="">Notre vision</a>
             <a href="">Nos engagements</a>
