code html pour maquette responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <article>
             <h2>Lorem ipsum dolor sit amet !</h2>
             <img class="photo" src="images/illu.jpg" alt="Photo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque corrupti delectus vitae exercitationem error eum quam sunt sit suscipit, repellendus eius iste quidem vero ducimus. Enim id necessitatibus aperiam exercitationem cupiditate expedita, pariatur, quis voluptatibus dolorem totam quisquam ipsa autem corrupti alias. Soluta, laudantium? Ratione hic unde molestiae ipsum aliquam?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque corrupti delectus vitae exercitationem error eum quam sunt sit suscipit, repellendus eius iste quidem vero ducimus. Enim id necessitatibus aperiam exercitationem<br /></p>
+            <p>cupiditate expedita, pariatur, quis voluptatibus dolorem totam quisquam ipsa autem corrupti alias. Soluta, laudantium? Ratione hic unde molestiae ipsum aliquam?</p>
         </article>
         <aside>
             <h2>Lorem, ipsum.</h2>
