code html pour maquette responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d95df2b126.js" crossorigin="anonymous"></script>
     <title>Maquette</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
             <a class="logo" href=""><img src="images/logo.png" alt="Logo"></a>
         </div>
         <nav>
-            <a href="">Notre vision</a>
-            <a href="">Nos engagements</a>
-            <a href="">Votre projet</a>
+            <a href="">Notre vision <i class="fa-solid fa-house"></i></a>
+            <a href="">Nos engagements <i class="fa-solid fa-house"></i></a>
+            <a href="">Votre projet <i class="fa-solid fa-house"></i></a>
         </nav>
     </header>
     <main>
