--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="">Notre vision <i class="fa-solid fa-house"></i></a>
             <a href="">Nos engagements <i class="fa-solid fa-house"></i></a>
-            <a href="">Votre projet <i class="fa-solid fa-house"></i></a>
+            <a href="">Votre projet <i class="fa-solid fa-user"></i></a>
         </nav>
     </header>
     <main>
